fixed some bugs

--- a/public/templates/public/tabs/account_settings_tab.html
+++ b/public/templates/public/tabs/account_settings_tab.html
@@ -5,15 +5,15 @@
                 <label  class="panel-title">Password</label>
             </div>
             <div class="col-md-6 text-muted">
-                <label class="panel-title" id="s6">Not visible</label>
+                <label id="s5" class="panel-title">Not visible</label>
             </div>
             <div class="col-md-3 text-right">
                 <label>
-                    <a id="e6" href="javascript:change_settings('it6', 'itp1', 'itp2', 'itp3', 's6','e6', 'password');">Edit</a>
+                    <a id="e5" href="javascript:change_settings('it5', 'itp1', 'itp2', 'itp3', 's5','e5', 'password');">Edit</a>
                 </label>
             </div>
         </div>
-        <div  class="hideIt" id="it6">
+        <div id="it5" style="display:none">
             <div class="row">
                 <div class="form-group">
                     <div class="col-md-4 text-right ">
@@ -54,15 +54,15 @@
                 <label  class="panel-title">Email address</label>
             </div>
             <div class="col-md-6 text-muted">
-                <label class="panel-title" id="s7">{{ user.email }}</label>
+                <label id="s6" class="panel-title">{{ user.email }}</label>
             </div>
             <div class="col-md-3 text-right">
                 <label>
-                    <a id="e7" href="javascript:change_settings('it7', 'ite1', 'ite2', 'ite3', 's7','e7', 'email');">Edit</a>
+                    <a id="e6" href="javascript:change_settings('it6', 'ite1', 'ite2', 'ite3', 's6','e6', 'email');">Edit</a>
                 </label>
             </div>
         </div>
-        <div class="hideIt" id="it7">
+        <div id="it6" style="display:none">
             <div class="row">
                 <div class="form-group">
                     <div class="col-md-4 text-right ">
