--- a/public/templates/public/tabs/personal_details_tab.html
+++ b/public/templates/public/tabs/personal_details_tab.html
@@ -6,7 +6,7 @@
             </div>
             <div class="col-md-6 text-muted">
                 <label class="panel-title" id="s1">{{ user.first_name }}</label>
-                <input class="hideIt" id="it1" style="display: none"></input>
+                <input id="it1" style="display: none"></input>
             </div>
             <div class="col-md-3 text-right">
                 <label>
@@ -41,30 +41,12 @@
                 <label  class="panel-title">Mobile Number</label>
             </div>
             <div class="col-md-6 text-muted">
-                <label class="panel-title" id="s3">0123456789</label>
-                <input class="hideIt" id="it3" style="display: none"></input>
+                <label class="panel-title" id="s3">{{ user.phone_number }}</label>
+                <input id="it3" style="display: none"></input>
             </div>
             <div class="col-md-3 text-right">
                 <label>
                     <a id="e3" href="javascript:toggle('it3','s3','e3', 'phone_number');">Edit</a>
-                </label>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="panel panel-default tab-heading">
-    <div class="panel-heading  hover">
-        <div class="row">
-            <div class="col-md-3">
-                <label  class="panel-title">Landline Number</label>
-            </div>
-            <div class="col-md-6 text-muted">
-                <label class="panel-title" id="s4">004400487845</label>
-                <input class="hideIt" id="it4" style="display: none"></input>
-            </div>
-            <div class="col-md-3 text-right">
-                <label>
-                    <a id="e4" href="javascript:toggle('it4','s4','e4');">Edit</a>
                 </label>
             </div>
         </div>
@@ -76,40 +58,44 @@
             <div class="col-md-3">
                 <label  class="panel-title">Home address</label>
             </div>
-            <div class="col-md-6 text-muted">
-                <label class="panel-title" id="s5">Flat 1, 123 Northam Road Southampton UK</label>
+            <div id="locationField" class="col-md-6 text-muted">
+                <label id="s4" class="panel-title">{{ user.address }}</label>
+                <input id="it4" class="form-control" placeholder="Enter your address" onFocus="geolocate()" type="text" style="display:none"></input>
             </div>
             <div class="col-md-3 text-right">
                 <label>
-                    <a id="e5" href="javascript:toggle('it5','s5','e5');">Edit</a>
+                    <a id="e4" href="javascript:toggle('it4','s4','e4', 'address');">Edit</a>
                 </label>
-            </div>
-        </div>
-        <div class="hideIt" id="it5" style="display: none">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>Postocde</label>
-                        <input type="postcode" class="form-control" required="" name="postcode" value="">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>Address Line 1</label>
-                        <input type="postcode" class="form-control" required="" name="postcode" value="">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>Addess Line 2</label>
-                        <input type="postcode" class="form-control" required="" name="postcode" value="">
-                    </div>
-                </div>
             </div>
         </div>
     </div>
 </div>
+
+<script>
+var placeSearch, autocomplete;
+
+function initAutocomplete() {
+  
+  autocomplete = new google.maps.places.Autocomplete(
+      (document.getElementById('it4')),
+      {types: ['geocode']});
+}
+
+function geolocate() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(function(position) {
+      var geolocation = {
+        lat: position.coords.latitude,
+        lng: position.coords.longitude
+      };
+      var circle = new google.maps.Circle({
+        center: geolocation,
+        radius: position.coords.accuracy
+      });
+      autocomplete.setBounds(circle.getBounds());
+    });
+  }
+}
+
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXr6cPuKrMcZ7IJ7_K4zV1X-0AwF3VLcU&signed_in=true&libraries=places&callback=initAutocomplete" async defer></script>
