--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -75,7 +75,7 @@
       <div class="col-xs-3">
         <p class="footer-column">About us</p>
         <ul class="">
-          <li class=""><a href="{% url 'staticpages:about_us' %}" tabindex="7">What is IBF</a></li>
+          <li class=""><a href="{% url 'staticpages:about_us' %}" tabindex="7">What is IBF?</a></li>
           <li class=""><a href="{% url 'staticpages:why_our_services' %}" tabindex="8">Why use our service?<a/></li>
           <li class=""><a href="{% url 'staticpages:our_strategy' %}" tabindex="9">Our strategy</a></li>
           <li class=""><a href="{% url 'staticpages:terms_conditions' %}"  tabindex="10">Terms &amp; Conditions</a></li>
