modified Item model

--- a/public/templates/public/pre_registration_form.html
+++ b/public/templates/public/pre_registration_form.html
@@ -125,7 +125,7 @@
   
 $("#photos-upload-input").fileinput({
     uploadUrl: '#', // you must set a valid URL here else you will get an error
-    allowedFileExtensions : ['jpg', 'png','gif'],
+    allowedFileExtensions : ['jpg', 'png','gif', 'jpeg'],
     overwriteInitial: false,
     maxFileSize: 1000,
     maxFilesNum: 10,
