--- a/public/templates/public/tabs/notifications_tab.html
+++ b/public/templates/public/tabs/notifications_tab.html
@@ -5,7 +5,7 @@
             <img src="{{MEDIA_URL}}/{{match.media.data}}" class="img-responsive center-block"></img>
         </div>
         <div class="col-md-6 text-muted">
-            <label class="panel-title" id="s6">{{match.topic.tags}}    Category:{{match.topic.category}}</label>
+            <label class="panel-title" id="s6">{{match.topic.title}}    Category:{{match.topic.category}}</label>
             <hr>
             <p>{{match.topic.description}}</p>
         </div>
