--- a/public/templates/public/tabs/registered_items_tab.html
+++ b/public/templates/public/tabs/registered_items_tab.html
@@ -8,7 +8,7 @@
             <img src="{{MEDIA_URL}}/{{item.media.data}}" class="img-responsive center-block"></img>
         </div>
         <div class="col-md-6 text-muted">
-            <label class="panel-title" id="s6">{{item.tags}}</label>
+            <label class="panel-title" id="s6">{{item.title}}</label>
             <hr>
             <p>{{item.category}}</p>
         </div>
