--- a/public/templates/public/pre_registration_form.html
+++ b/public/templates/public/pre_registration_form.html
@@ -43,7 +43,7 @@
           <div class="form-group">
             <label class="col-md-3 control-label" for="textinput">Unique identifier</label>  
             <div class="col-md-6">
-              <input id="uid" name="textinput" type="text" placeholder="I.e. MEI, Serial Number, reference number..." class="form-control input-md">
+              <input id="uid" name="textinput" type="text" placeholder="I.e. MEI, Serial Number, Reference Number..." class="form-control input-md">
                 
             </div>
           </div>
