--- a/public/templates/public/tabs/registered_items_tab.html
+++ b/public/templates/public/tabs/registered_items_tab.html
@@ -1,5 +1,5 @@
 <div class="row controls">
-    <a href="" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#pre-register-modal" ><span class="glyphicon glyphicon-plus"></span> Register New Item</a>
+    <a id="pre-register-btn" href="" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#pre-register-modal" ><span class="glyphicon glyphicon-plus"></span> Register New Item</a>
 </div>
 <ul class="registered-items">
     {% for item in pre_reg_items %}
