--- a/core/static/css/index.css
+++ b/core/static/css/index.css
@@ -341,7 +341,7 @@ a.ilost:hover{
 }
 
 .footer{
-  padding: 3% 14%;
+  padding: 1% 10%;
   background: rgba(1, 177, 107, 0.3);
   background-color: #01b16b;
   color: #fff;
@@ -477,15 +477,6 @@ h4.section-title{
 
 .no-feedback-icon i{
   display: none!important;
-}
-.red {
-  color: #a94442;
-}
-.gradient-effect{
-  color: rgba(255, 255, 255, 1);
-  background-color: rgba(33, 117, 62, 1);
-  background: -webkit-linear-gradient(top, rgba(235, 235, 235, 1) 0%, rgba(33, 117, 62, 1) 100%);
-  background: linear-gradient(to bottom, rgba(235, 235, 235, 1) 0%, rgba(33, 117, 62, 1) 100%);
 }
 
 .glyphicon.spinning {
@@ -782,4 +773,16 @@ span.tip {
 .card.hovercard .bottom {
     padding: 0 20px;
     margin-bottom: 17px;
+}
+
+/* item reporting preview */
+.modal-lg{
+    width: 50% !important;
+    max-width: 50% !important;
+}
+
+.narrow{
+  position: relative;
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
