--- a/public/templates/public/registerfounditem.html
+++ b/public/templates/public/registerfounditem.html
@@ -162,7 +162,8 @@
         </div>
 
         <div class="modal-footer">
-          <button type="button" id="submitButton" name="reportfound" class="btn btn-success btn-icon" onClick="uploadData('{{user.is_authenticated}}')">Report Item</button>
+          <!--<button type="button" id="submitButton" name="reportfound" class="btn btn-success btn-icon" onClick="uploadData('{{user.is_authenticated}}')">Report Item</button>-->
+          <a type="button" id="previewButton" name="preview" class="btn btn-success btn-icon" data-target="#previewModal" data-toggle="modal">Preview Item</a>
           <a class="btn btn-default btn-icon" href='{% url "public:index" %}'><i class="fa fa-times-circle"></i> Cancel</a>
         </div>
 
@@ -173,19 +174,81 @@
 
 
 <div class="modal fade" id="loginRequiredModal" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content" style="overflow-y:hidden;">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content" style="overflow-y:hidden;">
 
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">You are not logged in</h4>
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">You are not logged in</h4>
+      </div>
+
+      <div class="modal-body">
+        Please login using the top-right menu or register with pur service <a href='{% url "public:register" %}'>here</a> before uploading an item!!
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- preview modal -->
+<div class="modal fade" tabindex="-1" role="dialog" id="previewModal" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content" style="overflow:hidden">
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <img class="img-responsive" src="http://placehold.it/1200x600/555/000&text=One" alt="...">
+            <div class="carousel-caption">
+              One Image
+            </div>
+          </div>
+          <div class="item">
+            <img class="img-responsive" src="http://placehold.it/1200x600/fffccc/000&text=Two" alt="...">
+            <div class="carousel-caption">
+              Another Image
+            </div>
+          </div>
+          <div class="item">
+            <img class="img-responsive" src="http://placehold.it/1200x600/fcf00c/000&text=Three" alt="...">
+            <div class="carousel-caption">
+              Another Image
+            </div>
+          </div>
         </div>
 
-        <div class="modal-body">
-          Please login using the top-right menu or register with pur service <a href='{% url "public:register" %}'>here</a> before uploading an item!!
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+      </div>
+      <div class="details">
+        <hr class="narrow">
+        <div class="row">
+          <p id="description" class="text-center">Title</p>
+        </div>
+        <hr class="narrow">
+        <div class="row">
+          <p id="category" class="text-center">Description</p>
+        </div>
+        <hr class="narrow">
+        <div class="row">
+          <p id="finder" class="text-center">Finder</p>
+        </div>
+        <hr class="narrow">
+        <div class="row">
+          <p id="location" class="text-center">Location</p>
+        </div>
+        <hr class="narrow">
+        <div class="row">
+          <p id="dateNTime" class="text-center">Date n' TIme</p>
         </div>
       </div>
     </div>
+  </div>
 </div>
     
 <script src="{% static 'public/js/item_registration.js' %}" type="text/javascript"></script>
