--- a/public/templates/public/registerfounditem.html
+++ b/public/templates/public/registerfounditem.html
@@ -228,35 +228,72 @@
       <div class="details">
         <hr class="narrow">
         <div class="row">
-          <p id="prev_title" class="text-center">Title</p>
-        </div>
-        <div class="row">
-          <p id="prev_uid" class="text-center">Uid</p>
+           <p class="text-center" style="font-size: 16px; font-weight: bold;" id="prev_title"></p>
         </div>
         <hr class="narrow">
         <div class="row">
-          <p id="prev_description" class="text-center">Description</p>
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Uid</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_uid"></p>
+          </div>
         </div>
         <hr class="narrow">
         <div class="row">
-          <p id="prev_category" class="text-center">Category</p>
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Description</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_description"></p>
+          </div>
         </div>
         <hr class="narrow">
         <div class="row">
-          <p id="prev_tags" class="text-center">Tags</p>
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Category</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_category"></p>
+          </div>
         </div>
         <hr class="narrow">
         <div class="row">
-          <p id="prev_finder" class="text-center">Finder</p>
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Tags</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_tags"></p>
+          </div>
         </div>
         <hr class="narrow">
         <div class="row">
-          <p id="prev_location" class="text-center">Location</p>
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Finder</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_finder"></p>
+          </div>
         </div>
         <hr class="narrow">
         <div class="row">
-          <p id="prev_dateNTime" class="text-center">Date n' TIme</p>
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Location</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_location"></p>
+          </div>
         </div>
+        <hr class="narrow">
+        <div class="row">
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Date n' TIme</p>
+          </div>
+          <div class="col-xs-5">
+            <p class="value" id="prev_dateNTime"></p>
+          </div>
+        </div>
+        <hr class="narrow">
       </div>
     </div>
   </div>
