--- a/public/static/public/css/item_registration.css
+++ b/public/static/public/css/item_registration.css
@@ -94,10 +94,19 @@
 .gm-style-mtc {
   display: none;
 }
+
 .carousel-photo img{
   display: block!important;
   margin: 0 auto!important;
-  width:100%!important;
+  width:auto!important;
   height:auto!important;
   max-height: 300px!important;
+}
+
+.hint{
+  margin-left: 2%;
+}
+
+.value{
+  margin-right: 2%;
 }
