--- a/search_engine/templates/search_engine/search.html
+++ b/search_engine/templates/search_engine/search.html
@@ -171,52 +171,111 @@
 </div>
 
 <!-- item details modal -->
-<div class="modal fade" id="itemModal" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-          <button class="close" type="button" data-dismiss="modal">×</button>
-          <h3 class="modal-title"></h3>
-      </div>
-      <div class="modal-body">
-          <div id="preview-carousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-            </ol>
+<!-- preview modal -->
+<div class="modal fade" tabindex="-1" role="dialog" id="itemModal" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content" style="overflow:hidden">
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-          <div class="details">
-            <div class="row">
-              <p id="prev_description" class="gradient-effect text-center"></p>
-            </div>
-            <div class="row">
-              <p id="prev_category" class="gradient-effect text-center"></p>
-            </div>
-            <div class="row">
-              <p id="prev_finder" class="gradient-effect text-center"></p>
-            </div>
-            <div class="row">
-              <p id="prev_location" class="gradient-effect text-center"></p>
-            </div>
-            <div class="row">
-              <p id="prev_dateNTime" class="gradient-effect text-center"></p>
+        <!-- Wrapper for slides -->
+        <div id="photos-container" class="carousel-inner">
+          <div class="item active">
+            <img class="img-responsive" src="http://placehold.it/1200x600/555/000&text=One" alt="...">
+            <div class="carousel-caption">
+              One Image
             </div>
           </div>
+          <div class="item">
+            <img class="img-responsive" src="http://placehold.it/1200x600/fffccc/000&text=Two" alt="...">
+            <div class="carousel-caption">
+              Another Image
+            </div>
+          </div>
+          <div class="item">
+            <img class="img-responsive" src="http://placehold.it/1200x600/fcf00c/000&text=Three" alt="...">
+            <div class="carousel-caption">
+              Another Image
+            </div>
+          </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
       </div>
-      <div class="modal-footer">
+      <div class="details">
+        <hr class="narrow">
+        <div class="row">
+           <p class="text-center" style="font-size: 16px; font-weight: bold;" id="prev_title"></p>
+        </div>
+        <hr class="narrow">
+        <div class="row">
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Uid</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_uid"></p>
+          </div>
+        </div>
+        <hr class="narrow">
+        <div class="row">
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Description</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_description"></p>
+          </div>
+        </div>
+        <hr class="narrow">
+        <div class="row">
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Category</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_category"></p>
+          </div>
+        </div>
+        <hr class="narrow">
+        <div class="row">
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Tags</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_tags"></p>
+          </div>
+        </div>
+        <hr class="narrow">
+        <div class="row">
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Finder</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_finder"></p>
+          </div>
+        </div>
+        <hr class="narrow">
+        <div class="row">
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Location</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="value" id="prev_location"></p>
+          </div>
+        </div>
+        <hr class="narrow">
+        <div class="row">
+          <div class="col-xs-5">
+            <p class="hint text-muted text-right">Date n' TIme</p>
+          </div>
+          <div class="col-xs-5">
+            <p class="value" id="prev_dateNTime"></p>
+          </div>
+        </div>
+        <hr class="narrow">
       </div>
     </div>
   </div>
