--- a/paypalapp/templates/payment.html
+++ b/paypalapp/templates/payment.html
@@ -1,4 +1,4 @@
-{% extends 'public/base.html' %}
+{% extends 'base.html' %}
 
 {% block pagetitle %}Make Payment{% endblock %}
 
@@ -21,8 +21,9 @@
                 <h4 class="modal-title">Add your payment details</h4>
             </div>
 			<form id="paymentform" method="post" action="">
+
+				{% csrf_token %}
 				<div class="modal-body">
-				  <input type='hidden' name='csrfmiddlewaretoken' value='DdTUwsticXY91JTCjJk36oCb5R6CBdg4' />
 				  
 				  <div class="row">
                     <div class="col-md-3">
