--- a/public/static/public/css/myaccount.css
+++ b/public/static/public/css/myaccount.css
@@ -84,7 +84,16 @@ ul.registered-items li:last-child{
 }
 
 .controls{
-  margin-left: 75%;
+  margin-left: 40px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  color: #999999;
+  font-style: italic;
+  margin-top: 15px;
+}
+.controls .btn{
+  float:right;
+  font-style: normal;
 }
 /* end registered items */
 
