--- a/public/templates/public/myaccount.html
+++ b/public/templates/public/myaccount.html
@@ -24,47 +24,48 @@
     <div class="panel with-nav-tabs panel-default">
         <div class="panel-heading">
             <ul class="nav nav-tabs">
-                <li id="ltab1" class="active" onclick="reset()"><a href="#tab1" data-toggle="tab">Personal Details</a></li>
-                <li id="ltab2" onclick="reset()"><a href="#tab2" data-toggle="tab">Account settings</a></li>
-                <li id="ltab3" onclick="reset()"><a href="#tab3" data-toggle="tab">Registered Items</a></li>
-                <li id="ltab4" onclick="reset()"><a href="#tab4" data-toggle="tab">Messages</a></li>
-                <li id="ltab5" onclick="reset()"><a href="#tab5" data-toggle="tab">Notifications</a></li>
-                <li id="ltab6" onclick="reset()"><a href="#tab6" data-toggle="tab">Lost & Found Items</a></li>
+                <li id="ltab1" onclick="reset()"><a href="#tab1" data-toggle="tab">Lost & Found Items</a></li>
+                <li id="ltab2" class="active" onclick="reset()"><a href="#tab2" data-toggle="tab">Personal Details</a></li>
+                <li id="ltab3" onclick="reset()"><a href="#tab3" data-toggle="tab">Account settings</a></li>
+                <li id="ltab4" onclick="reset()"><a href="#tab4" data-toggle="tab">Pre-registered Items</a></li>
+                <li id="ltab5" onclick="reset()"><a href="#tab5" data-toggle="tab">Messages</a></li>
+                <li id="ltab6" onclick="reset()"><a href="#tab6" data-toggle="tab">Notifications</a></li>
             </ul>
         </div>
         <div class="panel-body">
             <div class="tab-content">
 
+                <!-- Lost & Found Items tab -->
+                <div class="tab-pane fade in" id="tab1">
+                    {% include 'public/tabs/lost_n_found_items_tab.html' %}
+                </div>
+
                 <!-- personal details tab -->
-                <div class="tab-pane fade in active" id="tab1">
+                <div class="tab-pane fade in active" id="tab2">
                     {% include 'public/tabs/personal_details_tab.html' %}
                 </div>
                 <!-- end personal details tab -->
 
                 <!-- account details tab -->
-                <div class="tab-pane fade in" id="tab2">
+                <div class="tab-pane fade in" id="tab3">
                     {% include 'public/tabs/account_settings_tab.html' %}
                 </div>
                 <!-- end account settings -->
 
-				<div class="tab-pane fade in" id="tab3">
+				<div class="tab-pane fade in" id="tab4">
                     {% include 'public/tabs/registered_items_tab.html' %}
                 </div>
 				
 				<!-- Messages tab -->
-				<div class="tab-pane fade in" id="tab4">
+				<div class="tab-pane fade in" id="tab5">
     				{% include 'public/tabs/messages_tab.html' %}
                 </div>
 
                 <!-- Notifications tab -->
-                <div class="tab-pane fade in" id="tab5">
+                <div class="tab-pane fade in" id="tab6">
                     {% include 'public/tabs/notifications_tab.html' %}
                 </div>
 
-                <!-- Lost & Found Items tab -->
-                <div class="tab-pane fade in" id="tab6">
-                    {% include 'public/tabs/lost_n_found_items_tab.html' %}
-                </div>
 			</div>
         </div>
     </div>
