--- a/public/templates/public/registration_form.html
+++ b/public/templates/public/registration_form.html
@@ -239,7 +239,7 @@
 
                 <div class="modal-footer">
                     <input type="submit" name="createaccount" value="Create My Account" class="btn btn-success btn-icon"/>
-                    <a class="btn btn-default btn-icon" href='{% url "public:index" %}'><i class="fa fa-times-circle"></i> Cancel</a>
+                    <a class="btn btn-default btn-icon" type=button onClick="javascript:history.go(-1);"><i class="fa fa-times-circle"></i> Cancel</a>
                 </div>
             </form>
         </div>
