--- a/public/templates/public/tabs/account_settings_tab.html
+++ b/public/templates/public/tabs/account_settings_tab.html
@@ -95,4 +95,27 @@
             </div>
         </div>
     </div>
+</div>
+<div class="panel panel-default tab-heading">
+    <div class="panel-heading  hover">
+        <div class="row">
+            <div class="col-md-3">
+                <label  class="panel-title">Prefered way of contact</label>
+            </div>
+            <div class="col-md-6 text-muted"> 
+                <label class="panel-title" id="s7">{{ user.prefered_way_of_contact }}</label>
+                <select id="it7" style="display: none">
+                    <option selected disabled default >Choose...</option>
+                    <option class="glyphicon glyphicon-envelope" value="EMAIL">Email</option>
+                    <option class="glyphicon glyphicon-earphone" value="PHONE">Phone</option>
+                    <option class="glyphicon glyphicon-random" value="IBF">IBF</option>
+                </select>
+            </div>
+            <div class="col-md-3 text-right">
+                <label>
+                    <a id="e7" href="javascript:toggle('it7','s7','e7', 'prefered_way_of_contact');">Edit</a>
+                </label>
+            </div>
+        </div>
     </div>
+</div>
