--- a/public/templates/public/tabs/registered_items_tab.html
+++ b/public/templates/public/tabs/registered_items_tab.html
@@ -1,11 +1,18 @@
+
+ {% load css_utils %}
 <div class="row controls">
-    <a href="" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#pre-register-modal" ><span class="glyphicon glyphicon-plus"></span> Register New Item</a>
+    <div class="col-xs-8">
+        <p>You can pre-register items with I've Been Found, and if someone uploads it as a found item, you will be notified immediately.</p>
+    </div>
+    <div class="col-xs-4">
+        <a href="" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#pre-register-modal" ><span class="glyphicon glyphicon-plus"></span> Register New Item</a>
+    </div>
 </div>
 <ul class="registered-items">
     {% for item in pre_reg_items %}
-    <li class="row registered-item">
+    <li id="registered_item_{{item.pk}}" class="row registered-item">
         <div class="col-md-3">
-            <img src="{{MEDIA_URL}}{{item.media.data}}" class="img-responsive center-block"></img>
+            <img src="{{MEDIA_URL}}{{item.media.0.data}}" class="img-responsive center-block"></img>
         </div>
         <div class="col-md-6 text-muted">
             <label class="panel-title" id="s6">{{item.title}}</label>
@@ -14,7 +21,7 @@
         </div>
         <div class="col-md-3 text-right">
             <label>
-                <a id="e6" href="javascript:toggle('it6','s6','e6');">Update</a>
+                <a href="javascript:updateItem('{{item.title}}', '{{item.unique_id}}', '{{item.description}}', '{{item.category}}', '{{item.media}}', '{{MEDIA_URL|jsonify}}');">Update</a>
             </label>
         </div>
     </li>
@@ -27,3 +34,4 @@
     </li>
     {% endfor %}
 </ul>
+{% include "public/tabs/update_form.html"  %}
